adding the end page and scores file

--- a/game.html
+++ b/game.html
@@ -5,8 +5,8 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>JS Quiz</title>
-   <link rel="stylesheet" href="./assets/css/style.css">
-   <link link rel="stylesheet" href="./assets/css/game.css">
+   <link rel="stylesheet" href="./style.css">
+   <link rel="stylesheet" href="./game.css">
 </head>
 <body>
   <body> 
@@ -55,6 +55,6 @@
             
         </div>
     </div>
-    <scrip src="./js/game.js"></scrip>
+    <scrip src="./game.js"></scrip>
   </body>
 </html>
