--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Zanaty JS Quiz</title>
-   <link rel="stylesheet" href="./assets/css/style.css">
+   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
   <body> 
     <div class="container">
         <div id="home" class="flex-column flex-center">
@@ -18,6 +18,6 @@
 
         </div>
         </div>
-        <script src="./js/game.js"></script>
+        <script src="game.js"></script>
 </body>
 </html>
