--- a/end.html
+++ b/end.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>JS Quiz</title>
-   <link rel="stylesheet" href="./style.css">
-   <link rel="stylesheet" href="./game.css">
-   
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Congrates</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div class="container">
-    <div id="end" class="flex-cent flex-column">
-        <h1 id="finalScore">0<h1>
-            <form class="end-form-container">
-            <h2 id="end-text">Enter your name below to save your score!</h2>
-            <input type="text" name="name" id="username" placeholder="enter your name">
-            <button class="btn" id="saveScoreBtn" type="submit"
-            onclick="saveHighScore(event)" disabled>Save</button>
+    <div class="container">
+        <div id="end" class="flex-center flex-column">
+            <h1 id="finalScore">0</h1>
+            <form>
+                <input type="text" name="username" id="username" placeholder="username">
+                <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="./game.html" class="btn">Play Again</a>
+            <a href="/game.html" class="btn">Play Again</a>
             <a href="/" class="btn">Go Home</a>
-
+        </div>
     </div>
-</div>
-<script src="end.js"></script>
-    </body>
-
+    <script src="end.js"></script>
+</body>
 </html>
