--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Zanaty JS Quiz</title>
-   <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Z Quiz</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
-  <body> 
-    <div class="container">
-        <div id="home" class="flex-column flex-center">
-            <h1> ARE YOU READY?</h1>
-            <a href="/game.html" class="btn">Play</a>
-            <a href="/highschores.html" id="highscores-btn"
-            class="btn">High Scores</a>
-
-        </div>
-        </div>
-        <script src="game.js"></script>
+<body>
+  <div class="container">
+    <div id="home" class="flex-center flex-column">
+        <h1>Zanaty JS Quiz</h1>
+        <a class ="btn" href="/game.html">Play</a>
+        <a class ="btn" href="/highscores.html">High Scores</a>
+    </div>
+  </div>
 </body>
 </html>
