--- a/end.html
+++ b/end.html
@@ -15,7 +15,7 @@
                 <input type="text" name="username" id="username" placeholder="username">
                 <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="/game.html" class="btn">Play Again</a>
+            <a href="game.html" class="btn">Play Again</a>
             <a href="/" class="btn">Go Home</a>
         </div>
     </div>
