fixing the links

--- a/highscores.html
+++ b/highscores.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>High Scores</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="highscores.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./highscores.css">
 </head>
 <body>
         <div class="container">
@@ -16,7 +16,7 @@
                   <a class="btn" href="/">Go Home</a>
                 </div>
               </div>
-              <script src="highscores.js"></script>
+              <script src="./highscores.js"></script>
 </body>
 </html>
 
