--- a/end.html
+++ b/end.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Congrates</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <div class="container">
@@ -15,10 +15,10 @@
                 <input type="text" name="username" id="username" placeholder="username">
                 <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="game.html" class="btn">Play Again</a>
+            <a href="./game.html" class="btn">Play Again</a>
             <a href="/" class="btn">Go Home</a>
         </div>
     </div>
-    <script src="end.js"></script>
+    <script src="./end.js"></script>
 </body>
 </html>
