--- a/end.html
+++ b/end.html
@@ -16,7 +16,7 @@
                 <button type="submit" class="btn" id="saveScoreBtn" onclick="saveHighScore(event)" disabled>Save</button>
             </form>
             <a href="./game.html" class="btn">Play Again</a>
-            <a href="/" class="btn">Go Home</a>
+            <a href="./" class="btn">Go Home</a>
         </div>
     </div>
     <script src="./end.js"></script>
